--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "backend",
+  "name": "skribblei-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Skribblei backend server – an online multiplayer drawing and guessing game.",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Rajvardhan singh",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
