--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "frontend",
+  "name": "skribblei-frontend",
   "version": "0.1.0",
   "private": true,
+  "description": "Skribblei frontend – an online multiplayer drawing and guessing game.",
+  "author": "Rajvardhan singh",
+  "homepage": "",
+  "_comment_homepage": "TODO: Update homepage field to your Render deployment URL after deployment",
   "dependencies": {
     "@dicebear/collection": "^8.0.1",
     "@dicebear/core": "^8.0.1",
